--- a/package.json
+++ b/package.json
@@ -39,12 +39,13 @@
     "winston-daily-rotate-file": "^4.2.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
     "eslint": "^6.6.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.18.2",
-    "nodemon": "^1.19.2",
-    "@commitlint/cli": "^8.1.0",
-    "@commitlint/config-conventional": "^8.1.0"
+    "husky": "^4.2.3",
+    "nodemon": "^1.19.2"
   },
   "husky": {
     "hooks": {
