--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Event Management",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha ./test/*.js"
   },
   "repository": {
     "type": "git",
@@ -41,10 +41,13 @@
   "devDependencies": {
     "@commitlint/cli": "^8.3.5",
     "@commitlint/config-conventional": "^8.3.4",
+    "chai": "^3.2.0",
+    "chai-http": "^1.0.0",
     "eslint": "^6.6.0",
     "eslint-config-standard": "^12.0.0",
     "eslint-plugin-import": "^2.18.2",
     "husky": "^4.2.3",
+    "mocha": "^7.1.1",
     "nodemon": "^1.19.2"
   },
   "husky": {
