--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Event Management",
   "main": "app.js",
   "scripts": {
-    "test": "mocha ./test/*.js"
+    "test": "mocha ./test/*.js --timeout 15000"
   },
   "repository": {
     "type": "git",
